--- a/duaapp/android/app/src/main/AndroidManifest.xml
+++ b/duaapp/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+//internet permission
+    <uses-permission android:name="android.permission.INTERNET"/>
+//network state permission
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <application
         android:label="duaapp"
         android:name="${applicationName}"
